@@ -1,4 +1,5 @@
 
+o add attributes parameter(s) to add.vertices in R
 o find a way for writing equations in DocBook.
 o read and write non-structural info from/to GraphML files
   read:
